# flowspec

./: .gitignore  BUILD-CONCERT.md  CLAUDE.md  Cargo.toml  GENERATOR-README.md  LICENSE  README.md  generate-iterative-dev-loop.py  generator-config.yaml  spec.md
flowspec/: Cargo.toml
flowspec-cli/: Cargo.toml
flowspec-cli/src/: main.rs
flowspec-cli/tests/: cli_parsing.rs  cycle15_convergence.rs  cycle16_surface.rs  cycle17_init_surface.rs  cycle7_regression.rs  cycle8_trace_focused.rs  cycle9_surface.rs  dependency_graph_output.rs  diagnose_language.rs  diagnose_output.rs  diff_command.rs  dogfood_diagnose.rs  error_messages.rs  exit_codes.rs  javascript_output.rs  json_output.rs  language_filter.rs  language_typescript.rs  manifest_output.rs  mjs_extension.rs  pipe_safety.rs  sarif_output.rs  trace_command.rs  type_consolidation.rs
flowspec/src/: commands.rs  cycle10_js_cross_file_tests.rs  cycle10_surface_tests.rs  cycle11_rust_call_tests.rs  cycle11_surface_tests.rs  cycle12_rust_cross_file_tests.rs  cycle12_surface_tests.rs  cycle13_cjs_and_use_path_tests.rs  cycle13_surface_tests.rs  cycle14_diagnostic_interaction_tests.rs  cycle14_surface_tests.rs  cycle14_type_reference_tests.rs  cycle15_fp_triage_tests.rs  cycle15_proximity_tests.rs  cycle16_method_call_tests.rs  cycle16_stale_ref_fix_tests.rs  cycle17_child_module_tests.rs  cycle18_analysis_tests.rs  cycle19_analysis_tests.rs  cycle20_analysis_tests.rs  cycle20_surface_tests.rs  cycle21_analysis_tests.rs  cycle21_qa1_tests.rs  cycle21_surface_tests.rs  error.rs  lib.rs  pattern_integration_tests.rs  (+2 more)
(+152 files in other folders)
