[package]
name = "flowspec"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Static code analyzer that traces the flow of all data in a codebase"

[dependencies]
bincode = "2"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
slotmap = { version = "1.0", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tree-sitter = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"

[dev-dependencies]
tempfile = "3"
